# depiction

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-depiction/: action.yml
.github/actions/setup-ionmapper/: action.yml
.github/actions/setup-ionplotter/: action.yml
.github/workflows/: pr-checks.yml
doc/source/: conf.py  index.rst
docs/: index.md
docs/modules/: index.md  persistence.md
docs/modules/image/: multi_channel_image.md
docs/modules/persistence/: .pages  general_overview.md  image_data.md  msi_data.md
examples/: .gitignore  file_checksums_benchmark.py  spectra_calibration.py
src/depiction/: estimate_ppm_error.py  spatial_smoothing_sparse_aware.py
src/depiction/calibration/: __init__.py  calibration_method.py  calibration_type.py  chemical_noise_bg_2019_boskamp_v2.py  isotope_pattern_matcher.py  perform_calibration.py
src/depiction/clustering/: extrapolate.py  maxmin_sampling.py  metrics.py  remap_clusters.py  subsampled.py
src/depiction/image/: __init__.py  feature_selection.py  horizontal_concat.py  image_channel_stats.py  image_normalization.py  multi_channel_image.py  multi_channel_image_concatenation.py  multi_channel_image_persistence.py  sparse_image_2d.py  sparse_representation.py  spatial_smoothing.py  spatial_smoothing_sparse_aware.py  spatialdata_converter.py  xarray_helper.py
src/depiction/misc/: README.md  find_file_util.py  integration_test_utils.py  numpy_util.py  render_quarto.py
src/depiction/parallel_ops/: parallel_config.py  parallel_map.py  read_spectra_parallel.py  write_spectra_parallel.py
src/depiction/persistence/: __init__.py  extract_metadata.py  file_checksums.py  format_ome_tiff.py  imzml_alignment_tracker.py  imzml_read_file.py  imzml_reader.py  imzml_write_file.py  imzml_writer.py  imzml_zip.py  pixel_size.py  ram_read_file.py  ram_reader.py  ram_write_file.py  types.py
src/depiction/spectrum/: evaluate_bins.py  evaluate_mean_spectrum.py  unit_conversion.py
src/depiction/tools/: align_imzml.py  align_profile_data.py  calibrate.py  clustering.py  correct_baseline.py  create_imzml_pool.py  cutout_rectangular_region_imzml.py  filter_peaks.py  generate_ion_image.py  generate_random_data.py  limit_mz_range.py  merge_imzml.py  normalize_spectra_intensities.py  ometiff_to_hdf5.py  pick_peaks.py  split_imzml.py  subsample_imzml.py
src/depiction/visualize/: plot_image.py  plot_mass_spectra_samples.py  plot_mass_spectrum.py  plot_mean_spectrum.py  visualize_2d_channels.py  visualize_calibration_targets.py  visualize_calibration_targets_pd_draft.py  visualize_mass_shift_map.py
src/depiction_cluster_sandbox/: run_cluster_sandbox.py
src/depiction_cluster_sandbox/workflow/: Snakefile
src/depiction_targeted_preproc/: README-old.md  README.md
src/depiction_targeted_preproc/app/: entrypoint.py  workunit_config.py
src/depiction_targeted_preproc/app_interface/: app.yml  app_container.yml  app_container_dev.yml  collect_chunk.py  dispatch_app.py  dispatch_individual_resources.py  process_chunk.py  run_chunk.py
src/depiction_targeted_preproc/example/: .gitignore  run.py
src/depiction_targeted_preproc/example_compare/: run_compare.py
src/depiction_targeted_preproc/example_sim/: .gitignore  default.yml  run_sim.py
src/depiction_targeted_preproc/pipeline/: prepare_inputs.py  prepare_params.py  run.py  run_batch.py  run_workflow.py  setup.py  setup_old.py  standardize_table.py  store_outputs.py
src/depiction_targeted_preproc/pipeline_config/: artifacts_mapping.py  default.yml  default_simulate.yml  model.py  test_model.py  validate.py
src/depiction_targeted_preproc/pipeline_steps/: proc_export_raw_metadata.py  qc_plot_peak_counts.py  qc_plot_peak_density.py  qc_plot_spectra_for_marker.py  qc_table_marker_distances.py  vis_calib_heatmap.py  vis_calib_qc.py  vis_calib_qc.qmd  vis_images_norm.py  vis_images_ome_tiff.py
src/depiction_targeted_preproc/workflow/: Snakefile  experiment.Snakefile  experimental.smk  snakemake_invoke.py
src/depiction_targeted_preprocbatch/: batch_dataset.py  executor.py  job_export_results.py  job_prepare_inputs.py  scp_util.py
src/ionmapper/: estimate_ppm_error.py  evaluate_baseline_correction.py  evaluate_bins.py  evaluate_calibration.py  evaluate_local_medians_baseline.py  evaluate_mean_spectrum.py  evaluate_normalization.py  evaluate_pick_peaks.py  evaluate_signal_proc.py  evaluate_tophat_baseline.py  spatial_smoothing.py  spatial_smoothing_sparse_aware.py
src/ionmapper/calibration/: calibrate_witold_peptide_mass_clusters_v1.py  chemical_noise_bg_2019_boskamp_v2.py  isotope_pattern_matcher.py  perform_calibration.py
src/ionmapper/image/: image_normalization.py  sparse_image_2d.py  spatialdata_converter.py
src/ionmapper/misc/: find_file_util.py  integration_test_utils.py  render_quarto.py
src/ionmapper/parallel_ops/: __init__.py  parallel_config.py  parallel_map.py  read_spectra_parallel.py  write_spectra_parallel.py
src/ionmapper/peak_filtering/: __init__.py  chain_filters.py  filter_by_intensity.py  filter_by_isotope_pattern.py  filter_by_reference_peak_distance.py  filter_n_highest_intensity_partitioned.py  peak_filtering_type.py
src/ionmapper/tools/: align_imzml.py  (+13 more)
src/ionplotter/: estimate_ppm_error.py  evaluate_baseline_correction.py  evaluate_bins.py  evaluate_local_medians_baseline.py  evaluate_mean_spectrum.py  evaluate_normalization.py  evaluate_signal_proc.py  evaluate_tophat_baseline.py  spatial_smoothing_sparse_aware.py
tests/: conftest.py  ruff.toml
tests/integration/: integration_test_utils.py  test_align_imzml_integration.py  test_correct_baseline_integration.py  test_merge_imzml_integration.py
tests/unit/: test_estimate_ppm_error.py  test_evaluate_baseline_correction.py  test_evaluate_bins.py  test_evaluate_local_medians_baseline.py  test_evaluate_mean_spectrum.py  test_evaluate_normalization.py  test_evaluate_pick_peaks_mad.py  test_evaluate_signal_proc.py  test_evaluate_tophat_baseline.py  test_spatial_smoothing.py  test_spatial_smoothing_sparse_aware.py
(+402 files in other folders)
